test/error/iocheck/err6.rzy
// Error: response is not allowed to write state

Err6 = Component
  what : response():R{0,100};

elementary
  a : R{0,100} = 0;
  
  bar = procedure()
    a := 42;
  end
  
  foo = procedure()
    bar();
  end
  
  what : response():R{0,100}
    foo();
    return a;
  end

end

